# armd

./: convert-coco.py  docker.sh  infer-local.py  infer.py  pyproject.toml
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
data/: data.yaml  debug2.param
data/test/labels/: 363475411_1515931729230469_4011741977313244206_n_jpg.rf.cbbe4e992d61b04182ae643b8ca1d895.txt  363699852_177272812045293_3748510223327425010_n_jpg.rf.49c540831ee7061a28bee727f23098c5.txt  367362342_590724799782466_2670977489768123746_n_jpg.rf.92bce3a3e5c0173adf6036bd43346597.txt  368569340_703919721681149_429694404048826037_n_jpg.rf.c276b0ca9b5b55cb617b0b47a010d664.txt  370076772_1261762267830905_5049362652364874642_n_jpg.rf.f3a8bd6a962ac066831f13eb27285749.txt  371532846_718060783165308_4829823860372083634_n_jpg.rf.e0df7b959b1038bbfb0051d57cfb3d81.txt  377238572_3589026064759651_919071474360502399_n_jpg.rf.21b0ab71410154274121424b0748f5c6.txt  379634318_160328417132022_8868513675632727115_n_jpg.rf.c572cabaf8374231b4866ec1e49fb36c.txt  379667194_1043891983634096_7537803708887262916_n_jpg.rf.18dc3072daa3b3530107089402cb4757.txt  379907120_2461360197376701_5920504001085239209_n_jpg.rf.930af2859678e1105b0b2f53f2cd87da.txt  382198346_6591322447571763_2463442474210084791_n_jpg.rf.578b3aee5bf4bbed64e72aa92ce982fb.txt  382228036_328262902940553_1302101357539034926_n_jpg.rf.d1b0086917799be74a3b40801b04e2c0.txt  (+51 more)
data/train/: labels.cache
data/valid/: labels.cache
(+1281 files in other folders)
